# app/Http/Controllers/User_ProfileController.php
@@ -31,6 +31,43 @@ class User_ProfileController extends Controller
     }
 
     /**
+     *  @OA\Post(
+     *  path="api/userprofile",
+     *  summary="upload a new profile picture",
+     *  description="The user about to upload a new profile picture must be authenticated",
+     *  operationId="userprofile",
+     *  tags={"UserProfile"},
+     *  security={ {"bearer": {} }},
+     *
+     *  @OA\RequestBody(
+     *    required=true,
+     *    description="Pass user credentials",
+     *    @OA\JsonContent(
+     *       required= {"profile__picture"},
+     *       @OA\Property(property="profile__picture", type="string", readOnly="true", example="https://placeimg.com/400/300/any?31560"),
+     * ),
+     * ),
+     * @OA\Response(
+     *     response=201,
+     *     description="Uploaded successfully",
+     * @OA\JsonContent(
+     *       @OA\Property(property="data", type="object", ref="#/components/schemas/User_Profile"),
+     *       ),
+     *    ),
+     *
+     * @OA\Response(
+     *    response=401,
+     *    description="Returns when user is not authenticated",
+     *    @OA\JsonContent(
+     *       @OA\Property(property="message", type="string", example="Unauthenticated"),
+     *    ),
+     *  ),
+     *
+     * )
+     */
+
+
+    /**
      * Store a newly created resource in storage.
      *
      * @param  \Illuminate\Http\Request  $request
@@ -44,8 +81,40 @@ class User_ProfileController extends Controller
             'profile__picture' => $request->profile__picture,
         ]);
 
-        return Response()->json($user_profile); 
+        return Response()->json([
+            'data' => $user_profile,
+        ]); 
     }
+
+     /**
+     * @OA\Get(
+     *  path="api/userprofile/{id}",
+     *  summary="Get a user by id",
+     *  description="Get a particular user profile by id",
+     *  operationId="user",
+     *  tags={"UserProfile"},
+     *  security={ {"bearer": {} }},
+     *
+     * @OA\Response(
+     *     response=200,
+     *     description="Success",
+     * @OA\JsonContent(
+     *       @OA\Property(property="data", type="object", ref="#/components/schemas/User_Profile"),
+     *       @OA\Property(property="follower", type="object", ref="#/components/schemas/User_Profile"),
+     *       @OA\Property(property="following", type="object", ref="#/components/schemas/User_Profile"),
+     *       ),
+     *    ),
+     *
+     * @OA\Response(
+     *    response=404,
+     *    description="Returns when resource is not found",
+     *    @OA\JsonContent(
+     *       @OA\Property(property="message", type="string", example="resource not found"),
+     *    ),
+     *  ),
+     *
+     * )
+     */
 
     /**
      * Display the specified resource.
@@ -79,6 +148,35 @@ class User_ProfileController extends Controller
     }
 
     /**
+     * @OA\Patch(
+     *  path="api/userprofile/{id}",
+     *  summary="Update by Id",
+     *  description="Currently authenticated user can update their details in the Database",
+     *  operationId="userprofile",
+     *  tags={"UserProfile"},
+     *  security={ {"bearer": {} }},
+     *
+     * @OA\Response(
+     *     response=200,
+     *     description="Success",
+     * @OA\JsonContent(
+     *       @OA\Property(property="message", type="string", example="'Userprofile updated successfully!"),
+     *       @OA\Property(property="data", type="object", ref="#/components/schemas/User_Profile"),
+     *       ),
+     *    ),
+     *
+     * @OA\Response(
+     *    response=401,
+     *    description="Returns when user is not authenticated",
+     *    @OA\JsonContent(
+     *       @OA\Property(property="message", type="string", example="Unauthorized"),
+     *    ),
+     *  ),
+     *
+     * )
+     */
+
+    /**
      * Update the specified resource in storage.
      *
      * @param  \Illuminate\Http\Request  $request
@@ -93,9 +191,49 @@ class User_ProfileController extends Controller
 
         return Response()->json([
             'message' => 'User successfully updated',
-            'updated' => $user_profile
+            'data' => $user_profile
         ]);
     }
+
+    /**
+     * @OA\Delete(
+     *  path="api/userprofile/{id}",
+     *  summary="Delete a user profile by its id",
+     *  description="The user about to delete a profile must be authenticated",
+     *  operationId="userprofile",
+     *  tags={"UserProfile"},
+     *  security={ {"bearer": {} }},
+     *
+     *
+     * @OA\Response(
+     *     response=200,
+     *     description="Success",
+     * @OA\JsonContent(
+     *       @OA\Property(property="message", type="string", example="Deleted successfully"),
+     *       @OA\Property(property="data", type="null"),
+     *       ),
+     *    ),
+     *
+     *  @OA\Response(
+     *    response=403,
+     *    description="Returns when user is not authorized to access a resource",
+     *    @OA\JsonContent(
+     *       @OA\Property(property="message", type="string", example="Acess denied"),
+     *    ),
+     *  ),
+     *
+     *
+     * @OA\Response(
+     *    response=401,
+     *    description="Returns when user is not authenticated",
+     *    @OA\JsonContent(
+     *       @OA\Property(property="message", type="string", example="Unauthenticated"),
+     *    ),
+     *  ),
+     *
+     * )
+     *
+     */
 
     /**
      * Remove the specified resource from storage.
